k8s/docker-poc-mssql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -f .\docker\docker-compose.yml -o .\k8s
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: docker-poc-mssql
  name: docker-poc-mssql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: docker-poc-mssql
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert -f .\docker\docker-compose.yml -o .\k8s
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: docker-poc-mssql
    spec:
      containers:
      - env:
        - name: ACCEPT_EULA
          value: "Y"
        - name: SA_PASSWORD
          value: yourStrong(!)Password
        image: mcr.microsoft.com/mssql/server
        imagePullPolicy: ""
        name: docker-poc-mssql
        ports:
        - containerPort: 1433
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
