k8s/docker-poc-rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: docker-poc
  name: docker-poc-rabbitmq
  labels:
    app: docker-poc-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-poc-rabbitmq
  strategy: {}
  template:
    metadata:
      labels:
        app: docker-poc-rabbitmq
    spec:
      containers:
      - name: docker-poc-rabbitmq
        image: masstransit/rabbitmq
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 15672
        - containerPort: 5672
        resources: {}
