k8s/docker-poc-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -f .\docker\docker-compose.yml -o .\k8s
    kompose.service.type: LoadBalancer
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: docker-poc-web
  name: docker-poc-web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: docker-poc-web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert -f .\docker\docker-compose.yml -o .\k8s
        kompose.service.type: LoadBalancer
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: docker-poc-web
    spec:
      containers:
      - image: christiaanderidder/docker-poc-web
        imagePullPolicy: ""
        name: docker-poc-web
        ports:
        - containerPort: 80
        - containerPort: 443
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
