k8s/docker-poc-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: docker-poc
  name: docker-poc-worker
  labels:
    app: docker-poc-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docker-poc-worker
  strategy: {}
  template:
    metadata:
      labels:
        app: docker-poc-worker
    spec:
      containers:
      - name: docker-poc-worker
        image: christiaanderidder/docker-poc-worker
        imagePullPolicy: IfNotPresent
        resources: {}
