k8s/docker-poc-mssql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -f .\docker\docker-compose.yml -o .\k8s
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: docker-poc-mssql
  name: docker-poc-mssql
spec:
  ports:
  - name: "11433"
    port: 11433
    targetPort: 1433
  selector:
    io.kompose.service: docker-poc-mssql
status:
  loadBalancer: {}
