k8s/docker-poc-oauth-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: docker-poc
  name: docker-poc-oauth
  labels:
    app: docker-poc-oauth
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  selector:
    app: docker-poc-oauth
